feat: adiciona rotas de update e unlink da reserva
