# docs/jsons/API_Reserva_Express_1.0.0.swagger.json
@@ -380,6 +380,33 @@
           }
         }
       },
+      "put": {
+        "summary": "Atualiza a reserva",
+        "tags": [
+          "Reservation"
+        ],
+        "parameters": [
+          {
+            "in": "path",
+            "name": "id",
+            "schema": {
+              "type": "string"
+            },
+            "required": true
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Reserva realizada"
+          },
+          "400": {
+            "description": "Reserva já existente"
+          },
+          "404": {
+            "description": "Reserva não encontrada"
+          }
+        }
+      },
       "delete": {
         "summary": "Remove reserva por ID",
         "tags": [
@@ -406,8 +433,37 @@
       }
     },
     "/reservations/reserve/{id}": {
-      "put": {
+      "post": {
         "summary": "Faz a reserva para um usuário",
+        "tags": [
+          "Reservation"
+        ],
+        "parameters": [
+          {
+            "in": "path",
+            "name": "id",
+            "schema": {
+              "type": "string"
+            },
+            "required": true
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Reserva realizada"
+          },
+          "400": {
+            "description": "Reserva já existente"
+          },
+          "404": {
+            "description": "Reserva não encontrada"
+          }
+        }
+      }
+    },
+    "/reservations/unlink/{id}": {
+      "post": {
+        "summary": "Encerra a reserva de um usuário",
         "tags": [
           "Reservation"
         ],
