# features/api/reservation/controllers/ReservationController.ts
@@ -4,8 +4,7 @@ import { ReservationRules } from '../ReservationRules.ts'
 import { throwlhos } from '../../../../globals/Throwlhos.ts'
 import { QueryOptions } from 'mongoose'
 import { Reservation } from '../../../../models/Reservation/Reservation.ts'
-import { ObjectId, StartTransaction } from '../../../../globals/Mongo.ts'
-import { ExpressReservationDB } from '../../../../database/db/ExpressReservationDB.ts'
+import { ObjectId } from '../../../../globals/Mongo.ts'
 import { ReserveService } from '../../../../services/ReserveService.ts'
 
 export class ReservationController {
@@ -69,7 +68,12 @@ export class ReservationController {
     try {
       const id = req.user.id
 
-      const reservations = await this.reservationRepository.findMany({ buyer: ObjectId(id) })
+      const reservations = await this.reservationRepository.findMany({ 
+        $or : [
+          {buyer: ObjectId(id)}, 
+          {owner : ObjectId(id)}
+        ]
+       })
 
       if (reservations.length === 0) {
         throw throwlhos.err_notFound('Nenhuma reserva encontrada', { reservations })
@@ -106,6 +110,38 @@ export class ReservationController {
     }
   }
 
+  update = async (req :Request, res : Response, next : NextFunction) => {
+    try {
+      const id = req.params.id
+      const {price, name, daysOfDuration} = req.body
+
+      this.rules.validate({name, isRequiredField : false}, {price, isRequiredField : false}, {daysOfDuration, isRequiredField : false})
+
+      const update : Partial<Reservation> = {
+        name, price, daysOfDuration
+      }
+
+      const reservation = await this.reservationRepository.findById(id)
+
+      if(!reservation){
+        throw throwlhos.err_notFound('Nenhuma reserva encontrada')
+      }
+
+      if(reservation.buyer){
+        throw throwlhos.err_unprocessableEntity('Não é possível alterar a reserva enquanto estiver em uso')
+      }
+
+      await this.reservationRepository.updateById(id, update)
+
+      res.send_ok('Reserva atualizada', {
+        reservation
+      })
+
+    } catch (error) {
+      next(error)
+    }
+  }
+
   reserve = async (req: Request, res: Response, next: NextFunction) => {
     try {
       const id = req.params.id
@@ -123,7 +159,7 @@ export class ReservationController {
       }
 
       if (reservation.owner.toString() == buyer) {
-        throw throwlhos.err_badRequest('Não é possível reservar o que você mesmo criou', {
+        throw throwlhos.err_badRequest('Não é possível reservar sua própria reserva', {
           buyer,
           owner: reservation.owner,
         })
@@ -134,7 +170,7 @@ export class ReservationController {
       }
 
       if (reservation.price > balance) {
-        throw throwlhos.err_preconditionFailed('Saldo insuficiente para a compra da reserva')
+        throw throwlhos.err_unprocessableEntity('Saldo insuficiente para a compra da reserva')
       }
 
       const reserveService = new ReserveService()
@@ -158,6 +194,47 @@ export class ReservationController {
     } catch (error) {
       next(error)
     } 
+  }
+
+  unlink = async(req:Request, res : Response, next : NextFunction) => {
+    try {
+      const id = req.params.id
+
+      const reservation = await this.reservationRepository.findById(id)
+
+      if(!reservation){
+        throw throwlhos.err_notFound('Nenhuma reserva encontrada', {
+          id
+        })
+      }
+
+      if(!reservation.buyer){
+        throw throwlhos.err_unprocessableEntity('A reserva ainda não foi alugada', {
+          reservation
+        })
+      }
+
+      const today = new Date();
+
+      if(reservation.endDate && reservation.endDate > today){
+        throw throwlhos.err_unprocessableEntity('Não é possível encerrar uma reserva com finalização pendente', {
+          today,
+          endDate : reservation.endDate,
+        })
+      }
+
+      const unlinked = await this.reservationRepository.findOneAndUpdate(ObjectId(id), {
+        buyer : null,
+        startedDate : null,
+        endDate : null
+      })
+
+      res.send_ok('Reserva encerrada', {
+        reservation : unlinked
+      })
+    } catch (error) {
+      next(error)
+    }
   }
 
   remove = async (req: Request, res: Response, next: NextFunction) => {
